Get rid of cgroups special handling in core